--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-annotations:23.1.1'
+    }
+}
 
 allprojects {
     repositories {
