--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+def AAVersion = '4.1.0'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    }
+}
+
+dependencies {
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
+}
 
 android {
     compileSdkVersion 25
@@ -28,5 +44,9 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.android.support:support-annotations:25.1.0'
     testCompile 'junit:junit:4.12'
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
 }
