--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,3 +50,9 @@ dependencies {
 dependencies {
     compile 'com.android.support:support-v4:25.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
