--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,3 +56,6 @@ dependencies {
 dependencies {
     compile 'com.android.support:support-v4:25.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
