--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,3 +59,6 @@ dependencies {
 dependencies {
     compile 'com.android.support:support-v4:25.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
