--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,3 +48,9 @@ dependencies {
     compile 'com.android.support:support-v4:25.+'
     testCompile 'junit:junit:4.12'
 }
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
