--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,9 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:support-annotations:25.1.0'
     compile 'com.android.support:support-v4:25.+'
+    compile 'com.android.support:customtabs:25.3.1'
     testCompile 'junit:junit:4.12'
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
 }
